crates/vaab-vm/tests/snapshots/errors__starting_a_task_says_which_phase_brings_it.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: rendered
---
[not-yet] Error: tasks arrive in phase 4
   ╭─[ example.vaab:2:11 ]
   │
 2 │ let job = start { work() }
   │           ────────┬───────  
   │                   ╰───────── this is not built yet
   │ 
   │ Help: phase 4 builds the scheduler that tasks and channels run on
   │ 
   │ Note: it type-checks today, so the program is ready for the phase that runs it
───╯
