crates/vaab-vm/tests/snapshots/errors__the_one_division_whose_answer_does_not_fit.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: stops(source)
---
[integer-overflow] Error: this division does not fit in an Int
   ╭─[ example.vaab:2:7 ]
   │
 2 │ print(smallest / -1)
   │       ──────┬──────  
   │             ╰──────── this went past what an Int can hold
   │ 
   │ Help: an Int is 64 bits, so it holds whole numbers from -9223372036854775808 to 9223372036854775807
   │ 
   │ Note: Vaab checks every calculation rather than quietly wrapping round
───╯
