crates/vaab-vm/tests/snapshots/errors__the_size_of_the_smallest_whole_number.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: stops(source)
---
[integer-overflow] Error: this size does not fit in an Int
   ╭─[ example.vaab:2:7 ]
   │
 2 │ print(smallest.abs())
   │       ───────┬──────  
   │              ╰──────── this went past what an Int can hold
   │ 
   │ Help: an Int is 64 bits, so it holds whole numbers from -9223372036854775808 to 9223372036854775807
   │ 
   │ Note: Vaab checks every calculation rather than quietly wrapping round
───╯
