crates/vaab-vm/tests/snapshots/errors__together_waits_for_tasks_started_inside_it.snap
---
source: crates/vaab-vm/tests/errors.rs
expression: "support::output(\"together {\\n\\x20   start { print(\\\"working\\\") }\\n}\\nprint(\\\"done\\\")\\n\").join(\"\\n\")"
---
working
done
